--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,32 +190,84 @@
     "\n",
     "        assert self.identityOneCell()\n",
     "        assert self.identityTwoCell()\n",
-    "        assert self.strict2Identity()\n",
+    "        assert self.strict2Associativity()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
     "    \n",
     "    def __str__(self) -> str:\n",
-    "        return str((self.cells_0, self.homs, self.identityMap, self.comp))\n",
+    "        return str((self.zeroCells, self.hom, self.identityMap, self.comp))\n",
     "    \n",
+    "    # check that identities work for one cells\n",
     "    def identityOneCell(self):\n",
-    "        for zeroCellIdentity in self.zeroCells:\n",
+    "        for thisZeroCell in self.zeroCells:\n",
+    "            thisIdentityOneCell = self.identityMap[thisZeroCell]\n",
     "            for zeroCell in self.zeroCells:\n",
-    "                pass \n",
     "\n",
+    "                # identity morphism is second\n",
+    "                if (zeroCell,thisZeroCell) in self.hom.keys():\n",
+    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
+    "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
+    "                    for thisOneCell in self.hom[(zeroCell, thisZeroCell)].objects:\n",
+    "                        if thisOneCellMap[(thisIdentityOneCell, thisOneCell)] != thisOneCell:\n",
+    "                            return False\n",
+    "                        \n",
+    "                # identity morphism is first\n",
+    "                if (thisZeroCell, zeroCell) in self.hom.keys():\n",
+    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
+    "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
+    "                    for thisOneCell in self.hom[(thisZeroCell, zeroCell)].objects:\n",
+    "                        if thisOneCellMap[(thisOneCell, thisIdentityOneCell)] != thisOneCell:\n",
+    "                            return False\n",
+    "                        \n",
+    "        return True\n",
+    "    \n",
     "    def identityTwoCell(self):\n",
-    "        pass\n",
+    "        for thisZeroCell in self.zeroCells:\n",
+    "            thisCategory = self.hom[(thisZeroCell, thisZeroCell)]\n",
+    "            thisIdentityOneCell = self.identityMap[thisZeroCell]\n",
+    "            thisIdentityTwoCell = thisCategory.identityMap[thisIdentityOneCell]\n",
+    "\n",
+    "            for zeroCell in self.zeroCells:\n",
+    "\n",
+    "                # identity morphism is second\n",
+    "                if (zeroCell,thisZeroCell) in self.hom.keys():\n",
+    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
+    "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
+    "                    for thisTwoCell in self.hom[(zeroCell, thisZeroCell)].morphisms:\n",
+    "                        if thisTwoCellMap[(thisIdentityTwoCell, thisTwoCell)] != thisTwoCell:\n",
+    "                            return False\n",
+    "                        \n",
+    "                # identity morphism is first\n",
+    "                if (thisZeroCell, zeroCell) in self.hom.keys():\n",
+    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
+    "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
+    "                    for thisTwoCell in self.hom[(thisZeroCell, zeroCell)].morphisms:\n",
+    "                        if thisTwoCellMap[(thisTwoCell, thisIdentityTwoCell)] != thisTwoCell:\n",
+    "                            return False\n",
+    "        \n",
+    "        return True\n",
     "    \n",
     "    def strict2Associativity(self):\n",
-    "        pass\n",
-    "\n"
+    "        return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAD7D7EB0>, (1, 0, 0): <__main__.Functor object at 0x000001DEAD7D6CB0>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD7D6D10>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD7D5E70>})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "src = {\"1_01_0\": 0}\n",
@@ -243,7 +295,8 @@
     "F111 = copy.deepcopy(F000)\n",
     "\n",
     "comp = {(0,0,0):F000, (1,0,0):F100, (1,1,0):F110, (1,1,1): F111}\n",
-    "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)"
+    "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)\n",
+    "strict2"
    ]
   },
   {
