--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,8 @@
     "\n",
     "        assert self.identityOneCell()\n",
     "        assert self.identityTwoCell()\n",
-    "        assert self.strict2Associativity()\n",
+    "        assert self.associativityOneCell()\n",
+    "        assert self.associativityTwoCell()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
@@ -248,22 +249,42 @@
     "        \n",
     "        return True\n",
     "    \n",
-    "    def strict2Associativity(self):\n",
+    "    def associativityOneCell(self):\n",
+    "        for aZeroCell in self.zeroCells:\n",
+    "            for bZeroCell in self.zeroCells:\n",
+    "                for cZeroCell in self.zeroCells:\n",
+    "                    for dZeroCell in self.zeroCells:\n",
+    "                        if (aZeroCell, bZeroCell) in self.hom.keys() and (bZeroCell, cZeroCell) in self.hom.keys() and (cZeroCell, dZeroCell) in self.hom.keys():\n",
+    "                            for abOneCell in self.hom[(aZeroCell, bZeroCell)].objects:\n",
+    "                                for bcOneCell in self.hom[(bZeroCell, cZeroCell)].objects:\n",
+    "                                    for cdOneCell in self.hom[(cZeroCell, dZeroCell)].objects:\n",
+    "                                        abcCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        bcdCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        abcOneCellMap = abcCompositionFunctor.objectMap\n",
+    "                                        bcdOneCellMap = bcdCompositionFunctor.objectMap\n",
+    "                                        abcFirst = bcdOneCellMap[(cdOneCell, abcOneCellMap[(bcOneCell, abOneCell)])]\n",
+    "                                        bcdFirst = abcOneCellMap[(bcdOneCellMap[(cdOneCell, bcOneCell)], abOneCell)]\n",
+    "                                        if abcFirst != bcdFirst:\n",
+    "                                            return False\n",
+    "                                        \n",
+    "        return True\n",
+    "    \n",
+    "    def associativityTwoCell(self):\n",
     "        return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAD7D7EB0>, (1, 0, 0): <__main__.Functor object at 0x000001DEAD7D6CB0>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD7D6D10>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD7D5E70>})"
+       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAD7D7160>, (1, 0, 0): <__main__.Functor object at 0x000001DEAD7D5030>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD7D4820>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD7D7340>})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,6 +315,7 @@
     "F110 = copy.deepcopy(F000)\n",
     "F111 = copy.deepcopy(F000)\n",
     "\n",
+    "# (C, B, A)\n",
     "comp = {(0,0,0):F000, (1,0,0):F100, (1,1,0):F110, (1,1,1): F111}\n",
     "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)\n",
     "strict2"
