--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,21 +270,38 @@
     "        return True\n",
     "    \n",
     "    def associativityTwoCell(self):\n",
+    "        for aZeroCell in self.zeroCells:\n",
+    "            for bZeroCell in self.zeroCells:\n",
+    "                for cZeroCell in self.zeroCells:\n",
+    "                    for dZeroCell in self.zeroCells:\n",
+    "                        if (aZeroCell, bZeroCell) in self.hom.keys() and (bZeroCell, cZeroCell) in self.hom.keys() and (cZeroCell, dZeroCell) in self.hom.keys():\n",
+    "                            for abTwoCell in self.hom[(aZeroCell, bZeroCell)].morphisms:\n",
+    "                                for bcTwoCell in self.hom[(bZeroCell, cZeroCell)].morphisms:\n",
+    "                                    for cdTwoCell in self.hom[(cZeroCell, dZeroCell)].morphisms:\n",
+    "                                        abcCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        bcdCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        abcTwoCellMap = abcCompositionFunctor.morphismMap\n",
+    "                                        bcdTwoCellMap = bcdCompositionFunctor.morphismMap\n",
+    "                                        abcFirst = bcdTwoCellMap[(cdTwoCell, abcTwoCellMap[(bcTwoCell, abTwoCell)])]\n",
+    "                                        bcdFirst = abcTwoCellMap[(bcdTwoCellMap[(cdTwoCell, bcTwoCell)], abTwoCell)]\n",
+    "                                        if abcFirst != bcdFirst:\n",
+    "                                            return False\n",
+    "                                        \n",
     "        return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAD7D7160>, (1, 0, 0): <__main__.Functor object at 0x000001DEAD7D5030>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD7D4820>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD7D7340>})"
+       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAC5B7DF0>, (1, 0, 0): <__main__.Functor object at 0x000001DEAC5B63B0>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD93E200>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD93F760>})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
