--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -15,6 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#############   Category Class   ###############\n",
+    "\n",
+    "# src: morphism names --> object names\n",
+    "# target: morphism names --> object names\n",
+    "# comp: (morphism, morphism) --> morphism\n",
+    "# identityMap: objects --> morphisms\n",
+    "\n",
     "class Category:\n",
     "    def __init__(self, src:dict, target:dict, comp:dict, identityMap:dict = {}) -> None:\n",
     "        self.src = src\n",
@@ -24,9 +31,11 @@
     "        self.morphisms = list(src.keys())\n",
     "        self.identityMap = identityMap\n",
     "\n",
+    "        # if no identities are given add identities\n",
     "        if identityMap == {}:\n",
     "            self.addIdentities()\n",
     "\n",
+    "        # verify essential properties\n",
     "        assert set(identityMap.keys()) == self.objects\n",
     "        assert self.src.keys() == self.target.keys()\n",
     "        assert self.composabilityCheck()\n",
@@ -68,6 +77,7 @@
     "                            return False\n",
     "        return True\n",
     "    \n",
+    "    # add identity morphisms to set of morphisms\n",
     "    def addIdentities(self) -> None:\n",
     "        for thisObject in self.objects:\n",
     "            thisMorphism = \"id_\" + str(thisObject)\n",
@@ -82,6 +92,13 @@
     "                    self.comp[(thisMorphism, i)] = i\n",
     "\n",
     "\n",
+    "#############   Functor Class   ###################\n",
+    "\n",
+    "# srcCat: Category\n",
+    "# targetCat: Category\n",
+    "# objectMap: objects --> objects\n",
+    "# morphismMap: morphisms --> morphisms\n",
+    "\n",
     "class Functor:\n",
     "    def __init__(self, srcCat: Category, targetCat: Category, objectMap: dict, morphismMap: dict) -> None:\n",
     "        self.srcCat = srcCat\n",
@@ -95,6 +112,7 @@
     "    def __str__(self) -> str:\n",
     "        return str((self.srcCat, self.targetCat, self.objectMap, self.morphismMap))\n",
     "    \n",
+    "    # verify identity morphisms are mapped correctly\n",
     "    def identityCheck(self) -> bool:\n",
     "        for ob,thisID in self.srcCat.identityMap.items():\n",
     "            if self.morphismMap[thisID] != self.targetCat.identityMap[self.objectMap[ob]]:\n",
@@ -102,7 +120,7 @@
     "                return False\n",
     "        return True\n",
     "\n",
-    "\n",
+    "    # verify composition is preserved\n",
     "    def homomorphismFunctorCheck(self) -> bool:\n",
     "        for first in self.srcCat.morphisms:\n",
     "\n",
@@ -121,66 +139,11 @@
     "                    if self.morphismMap[srcComp] != targetComp:\n",
     "                        print(\"Functor composition violation...\")\n",
     "                        return False\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def productCategory(c:Category, d:Category):\n",
-    "    src = srcProduct(c, d)\n",
-    "    target = targetProduct(c, d)\n",
-    "    comp = compProduct(c,d)\n",
-    "    identityMap = identityMapProduct(c,d)\n",
-    "    productCat = Category(src, target, comp, identityMap)\n",
-    "    return productCat\n",
+    "        return True\n",
     "\n",
-    "def srcProduct(c:Category, d:Category):\n",
-    "    src = {(m1,m2):(o1, o2) for m1, o1 in c.src.items() for m2,o2 in d.src.items()}\n",
-    "    return src\n",
     "\n",
-    "def targetProduct(c:Category, d:Category):\n",
-    "    target = {(m1,m2):(o1, o2) for m1, o1 in c.target.items() for m2,o2 in d.target.items()}\n",
-    "    return target\n",
-    "    \n",
-    "def compProduct(c:Category, d:Category):\n",
-    "    comp = {((m1Source[0],m2Source[0]), (m1Source[1],m2Source[1])):(m1Target, m2Target) for m1Source, m1Target in c.comp.items() for m2Source, m2Target in d.comp.items()}\n",
-    "    return comp\n",
+    "##############  Strict 2-Category Class   ##################\n",
     "\n",
-    "def identityMapProduct (c:Category, d:Category):\n",
-    "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
-    "    return identityMap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src = {\"f\":0, \"g\":1, \"h\":2, \"i\":0, \"m\":0, \"k\":1}\n",
-    "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
-    "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
-    "\n",
-    "c1 = Category(src, target, comp, {})\n",
-    "c2 = Category(src, target, comp, {})\n",
-    "\n",
-    "productC1C2 = productCategory(c1, c2)\n",
-    "\n",
-    "objectMap = {0:0, 1:1, 2:2, 3:3}\n",
-    "morphismMap = {i:i for i in c1.morphisms}\n",
-    "F = Functor(c1, c2, objectMap, morphismMap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class StrictTwoCategory:\n",
     "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict) -> None:\n",
     "        self.zeroCells = zeroCells\n",
@@ -287,7 +250,54 @@
     "                                        if abcFirst != bcdFirst:\n",
     "                                            return False\n",
     "                                        \n",
-    "        return True\n"
+    "        return True\n",
+    "\n",
+    "\n",
+    "###############   Product Category Functions   ##############\n",
+    "    \n",
+    "def productCategory(c:Category, d:Category):\n",
+    "    src = srcProduct(c, d)\n",
+    "    target = targetProduct(c, d)\n",
+    "    comp = compProduct(c,d)\n",
+    "    identityMap = identityMapProduct(c,d)\n",
+    "    productCat = Category(src, target, comp, identityMap)\n",
+    "    return productCat\n",
+    "\n",
+    "def srcProduct(c:Category, d:Category):\n",
+    "    src = {(m1,m2):(o1, o2) for m1, o1 in c.src.items() for m2,o2 in d.src.items()}\n",
+    "    return src\n",
+    "\n",
+    "def targetProduct(c:Category, d:Category):\n",
+    "    target = {(m1,m2):(o1, o2) for m1, o1 in c.target.items() for m2,o2 in d.target.items()}\n",
+    "    return target\n",
+    "    \n",
+    "def compProduct(c:Category, d:Category):\n",
+    "    comp = {((m1Source[0],m2Source[0]), (m1Source[1],m2Source[1])):(m1Target, m2Target) for m1Source, m1Target in c.comp.items() for m2Source, m2Target in d.comp.items()}\n",
+    "    return comp\n",
+    "\n",
+    "def identityMapProduct (c:Category, d:Category):\n",
+    "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
+    "    return identityMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = {\"f\":0, \"g\":1, \"h\":2, \"i\":0, \"m\":0, \"k\":1}\n",
+    "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
+    "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
+    "\n",
+    "c1 = Category(src, target, comp, {})\n",
+    "c2 = Category(src, target, comp, {})\n",
+    "\n",
+    "productC1C2 = productCategory(c1, c2)\n",
+    "\n",
+    "objectMap = {0:0, 1:1, 2:2, 3:3}\n",
+    "morphismMap = {i:i for i in c1.morphisms}\n",
+    "F = Functor(c1, c2, objectMap, morphismMap)"
    ]
   },
   {
