--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -144,6 +144,11 @@
     "\n",
     "##############  Strict 2-Category Class   ##################\n",
     "\n",
+    "# zeroCells: list\n",
+    "# hom: (zeroCell, zeroCell) --> Category\n",
+    "# identityMap: zeroCell --> oneCell (in the category hom(A,A))\n",
+    "# comp: (A: zeroCell, B: zeroCell, C: zeroCell) ---> functor (Hom(B,C)) x Hom(A, B) --> Hom(A, C))\n",
+    "\n",
     "class StrictTwoCategory:\n",
     "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict) -> None:\n",
     "        self.zeroCells = zeroCells\n",
