--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +156,7 @@
     "        self.identityMap = identityMap\n",
     "        self.comp = comp\n",
     "\n",
+    "        # verify essential properties\n",
     "        assert self.identityOneCell()\n",
     "        assert self.identityTwoCell()\n",
     "        assert self.associativityOneCell()\n",
@@ -191,6 +192,7 @@
     "                        \n",
     "        return True\n",
     "    \n",
+    "    # check that identities work for two cells\n",
     "    def identityTwoCell(self):\n",
     "        for thisZeroCell in self.zeroCells:\n",
     "            thisCategory = self.hom[(thisZeroCell, thisZeroCell)]\n",
@@ -217,6 +219,7 @@
     "        \n",
     "        return True\n",
     "    \n",
+    "    # verify one cell composition is associative\n",
     "    def associativityOneCell(self):\n",
     "        for aZeroCell in self.zeroCells:\n",
     "            for bZeroCell in self.zeroCells:\n",
@@ -237,6 +240,7 @@
     "                                        \n",
     "        return True\n",
     "    \n",
+    "    # verify two cell composition is associative\n",
     "    def associativityTwoCell(self):\n",
     "        for aZeroCell in self.zeroCells:\n",
     "            for bZeroCell in self.zeroCells:\n",
@@ -260,6 +264,7 @@
     "\n",
     "###############   Product Category Functions   ##############\n",
     "    \n",
+    "# construct C1 x C2\n",
     "def productCategory(c:Category, d:Category):\n",
     "    src = srcProduct(c, d)\n",
     "    target = targetProduct(c, d)\n",
@@ -268,18 +273,22 @@
     "    productCat = Category(src, target, comp, identityMap)\n",
     "    return productCat\n",
     "\n",
+    "# construct the source dictionary for the product\n",
     "def srcProduct(c:Category, d:Category):\n",
     "    src = {(m1,m2):(o1, o2) for m1, o1 in c.src.items() for m2,o2 in d.src.items()}\n",
     "    return src\n",
     "\n",
+    "# construct the target dictionary for the product\n",
     "def targetProduct(c:Category, d:Category):\n",
     "    target = {(m1,m2):(o1, o2) for m1, o1 in c.target.items() for m2,o2 in d.target.items()}\n",
     "    return target\n",
     "    \n",
+    "# construct the composition dictionary for the product    \n",
     "def compProduct(c:Category, d:Category):\n",
     "    comp = {((m1Source[0],m2Source[0]), (m1Source[1],m2Source[1])):(m1Target, m2Target) for m1Source, m1Target in c.comp.items() for m2Source, m2Target in d.comp.items()}\n",
     "    return comp\n",
     "\n",
+    "# construct the identity dictionary for the product\n",
     "def identityMapProduct (c:Category, d:Category):\n",
     "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
     "    return identityMap"
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x000001DEAC5B7DF0>, (1, 0, 0): <__main__.Functor object at 0x000001DEAC5B63B0>, (1, 1, 0): <__main__.Functor object at 0x000001DEAD93E200>, (1, 1, 1): <__main__.Functor object at 0x000001DEAD93F760>})"
+       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x0000020CD5A734F0>, (1, 0, 0): <__main__.Functor object at 0x0000020CD5A73400>, (1, 1, 0): <__main__.Functor object at 0x0000020CD5A73460>, (1, 1, 1): <__main__.Functor object at 0x0000020CD5A73280>})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
