--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,8 @@
     "            for second in self.morphisms:\n",
     "                if self.src[second] == self.target[first]:\n",
     "                    if (second, first) not in self.comp.keys():\n",
-    "                        print(\"Composables lack a name...\")\n",
+    "                        print(\"Composables lack a name: \")\n",
+    "                        print(\"second, first: %s %s\" % (second,first))\n",
     "                        return False\n",
     "        return True\n",
     "    \n",
@@ -147,7 +148,7 @@
     "# zeroCells: list\n",
     "# hom: (zeroCell, zeroCell) --> Category\n",
     "# identityMap: zeroCell --> oneCell (in the category hom(A,A))\n",
-    "# comp: (A: zeroCell, B: zeroCell, C: zeroCell) ---> functor (Hom(B,C)) x Hom(A, B) --> Hom(A, C))\n",
+    "# comp: (A: zeroCell, B: zeroCell, C: zeroCell) ---> functor ( Hom(B,C)) x Hom(A, B) --> Hom(A, C) )\n",
     "\n",
     "class StrictTwoCategory:\n",
     "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict) -> None:\n",
@@ -176,7 +177,7 @@
     "\n",
     "                # identity morphism is second\n",
     "                if (zeroCell,thisZeroCell) in self.hom.keys():\n",
-    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
+    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
     "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
     "                    for thisOneCell in self.hom[(zeroCell, thisZeroCell)].objects:\n",
     "                        if thisOneCellMap[(thisIdentityOneCell, thisOneCell)] != thisOneCell:\n",
@@ -184,7 +185,7 @@
     "                        \n",
     "                # identity morphism is first\n",
     "                if (thisZeroCell, zeroCell) in self.hom.keys():\n",
-    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
+    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
     "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
     "                    for thisOneCell in self.hom[(thisZeroCell, zeroCell)].objects:\n",
     "                        if thisOneCellMap[(thisOneCell, thisIdentityOneCell)] != thisOneCell:\n",
@@ -203,7 +204,7 @@
     "\n",
     "                # identity morphism is second\n",
     "                if (zeroCell,thisZeroCell) in self.hom.keys():\n",
-    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
+    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
     "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
     "                    for thisTwoCell in self.hom[(zeroCell, thisZeroCell)].morphisms:\n",
     "                        if thisTwoCellMap[(thisIdentityTwoCell, thisTwoCell)] != thisTwoCell:\n",
@@ -211,7 +212,7 @@
     "                        \n",
     "                # identity morphism is first\n",
     "                if (thisZeroCell, zeroCell) in self.hom.keys():\n",
-    "                    thisCompositionFunctor = self.comp[(zeroCell, thisZeroCell, thisZeroCell)]\n",
+    "                    thisCompositionFunctor = self.comp[(thisZeroCell, thisZeroCell, zeroCell)]\n",
     "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
     "                    for thisTwoCell in self.hom[(thisZeroCell, zeroCell)].morphisms:\n",
     "                        if thisTwoCellMap[(thisTwoCell, thisIdentityTwoCell)] != thisTwoCell:\n",
@@ -229,8 +230,8 @@
     "                            for abOneCell in self.hom[(aZeroCell, bZeroCell)].objects:\n",
     "                                for bcOneCell in self.hom[(bZeroCell, cZeroCell)].objects:\n",
     "                                    for cdOneCell in self.hom[(cZeroCell, dZeroCell)].objects:\n",
-    "                                        abcCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
-    "                                        bcdCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        abcCompositionFunctor = self.comp[(aZeroCell, bZeroCell, cZeroCell)]\n",
+    "                                        bcdCompositionFunctor = self.comp[(bZeroCell, cZeroCell, dZeroCell)]\n",
     "                                        abcOneCellMap = abcCompositionFunctor.objectMap\n",
     "                                        bcdOneCellMap = bcdCompositionFunctor.objectMap\n",
     "                                        abcFirst = bcdOneCellMap[(cdOneCell, abcOneCellMap[(bcOneCell, abOneCell)])]\n",
@@ -250,8 +251,8 @@
     "                            for abTwoCell in self.hom[(aZeroCell, bZeroCell)].morphisms:\n",
     "                                for bcTwoCell in self.hom[(bZeroCell, cZeroCell)].morphisms:\n",
     "                                    for cdTwoCell in self.hom[(cZeroCell, dZeroCell)].morphisms:\n",
-    "                                        abcCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
-    "                                        bcdCompositionFunctor = self.comp[(cZeroCell, bZeroCell, aZeroCell)]\n",
+    "                                        abcCompositionFunctor = self.comp[(aZeroCell, bZeroCell, cZeroCell)]\n",
+    "                                        bcdCompositionFunctor = self.comp[(bZeroCell, cZeroCell, dZeroCell)]\n",
     "                                        abcTwoCellMap = abcCompositionFunctor.morphismMap\n",
     "                                        bcdTwoCellMap = bcdCompositionFunctor.morphismMap\n",
     "                                        abcFirst = bcdTwoCellMap[(cdTwoCell, abcTwoCellMap[(bcTwoCell, abTwoCell)])]\n",
@@ -264,7 +265,7 @@
     "\n",
     "###############   Product Category Functions   ##############\n",
     "    \n",
-    "# construct C1 x C2\n",
+    "# construct c x d \n",
     "def productCategory(c:Category, d:Category):\n",
     "    src = srcProduct(c, d)\n",
     "    target = targetProduct(c, d)\n",
@@ -296,10 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define two identical categories and their product\n",
     "src = {\"f\":0, \"g\":1, \"h\":2, \"i\":0, \"m\":0, \"k\":1}\n",
     "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
     "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
@@ -309,6 +311,7 @@
     "\n",
     "productC1C2 = productCategory(c1, c2)\n",
     "\n",
+    "# define the identity functor\n",
     "objectMap = {0:0, 1:1, 2:2, 3:3}\n",
     "morphismMap = {i:i for i in c1.morphisms}\n",
     "F = Functor(c1, c2, objectMap, morphismMap)"
@@ -316,48 +319,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 1], {(0, 0): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (1, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'}), (0, 1): ({'2_00_1': 0, 'id0': 0}, {'2_00_1': 0, 'id0': 0}, {('id0', 'id0'): 'id0', ('id0', '2_00_1'): '2_00_1', ('2_00_1', 'id0'): '2_00_1', ('2_00_1', '2_00_1'): 'id0'})}, {0: 0, 1: 0}, {(0, 0, 0): <__main__.Functor object at 0x0000020CD5A734F0>, (1, 0, 0): <__main__.Functor object at 0x0000020CD5A73400>, (1, 1, 0): <__main__.Functor object at 0x0000020CD5A73460>, (1, 1, 1): <__main__.Functor object at 0x0000020CD5A73280>})"
+       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x000001DA18EE3070>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x000001DA18EE04F0>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x000001DA18EE2710>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x000001DA17A18FD0>})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "src = {\"1_01_0\": 0}\n",
-    "target = {\"1_01_0\": 1}\n",
-    "cTwo = Category(src, target, {}, {})\n",
-    "''' \n",
+    "# define the hom categories as the group Z2\n",
+    "src = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
+    "target = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
+    "comp = {(\"2_00_0\", \"2_00_0\"):\"2_00_0\", (\"2_00_0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"2_00_0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"2_00_0\"}\n",
+    "z2 = Category(src, target, comp, {\"1_0\": \"2_00_0\"})\n",
     "\n",
-    "# hom sets are the group Z2\n",
-    "src = {\"2_00_1\": 0, \"id0\": 0}\n",
-    "target = {\"2_00_1\": 0, \"id0\": 0}\n",
-    "comp = {(\"id0\", \"id0\"):\"id0\", (\"id0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"id0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"id0\"}\n",
-    "z2 = Category(src, target, comp, {0:\"id0\"})\n",
-    "\n",
-    "zeroCells = [0,1]\n",
-    "hom = {(0,0):z2, (1,1):z2, (0,1):z2}\n",
-    "identityMap = {0:0, 1:0}\n",
+    "zeroCells = [\"0_0\",\"0_1\"]\n",
+    "hom = {(\"0_0\",\"0_0\"):z2, (\"0_1\",\"0_1\"):z2, (\"0_0\", \"0_1\"):z2}\n",
+    "identityMap = {\"0_0\":\"1_0\", \"0_1\":\"1_0\"}\n",
     "\n",
     "\n",
-    "F000 = Functor(productCategory(z2,z2), z2, {(0,0):0}, {(\"id0\",\"id0\"): \"id0\", \n",
-    "                                                       (\"id0\", \"2_00_1\"): \"2_00_1\", \n",
-    "                                                       (\"2_00_1\", \"id0\"): \"2_00_1\", \n",
-    "                                                       (\"2_00_1\", \"2_00_1\"): \"id0\"})\n",
+    "F000 = Functor(productCategory(z2,z2), z2, {(\"1_0\",\"1_0\"):\"1_0\"}, {(\"2_00_0\",\"2_00_0\"): \"2_00_0\", \n",
+    "                                                       (\"2_00_0\", \"2_00_1\"): \"2_00_1\", \n",
+    "                                                       (\"2_00_1\", \"2_00_0\"): \"2_00_1\", \n",
+    "                                                       (\"2_00_1\", \"2_00_1\"): \"2_00_0\"})\n",
     "F100 = copy.deepcopy(F000)\n",
     "F110 = copy.deepcopy(F000)\n",
     "F111 = copy.deepcopy(F000)\n",
     "\n",
     "# (C, B, A)\n",
-    "comp = {(0,0,0):F000, (1,0,0):F100, (1,1,0):F110, (1,1,1): F111}\n",
+    "comp = {(\"0_0\",\"0_0\",\"0_0\"):F000, (\"0_0\",\"0_0\",\"0_1\"):F100, (\"0_0\",\"0_1\",\"0_1\"):F110, (\"0_1\",\"0_1\",\"0_1\"): F111}\n",
     "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)\n",
     "strict2"
    ]
