--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x000001DA18EE3070>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x000001DA18EE04F0>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x000001DA18EE2710>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x000001DA17A18FD0>})"
+       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x0000020B98378250>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x0000020B9837B550>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x0000020B9837B520>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x0000020B983790F0>})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
