--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x0000020B98378250>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x0000020B9837B550>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x0000020B9837B520>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x0000020B983790F0>})"
+       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x0000020B996BF2E0>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x0000020B996BFFA0>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x0000020B996BC580>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x0000020B996BF4C0>})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,12 +349,12 @@
     "                                                       (\"2_00_0\", \"2_00_1\"): \"2_00_1\", \n",
     "                                                       (\"2_00_1\", \"2_00_0\"): \"2_00_1\", \n",
     "                                                       (\"2_00_1\", \"2_00_1\"): \"2_00_0\"})\n",
-    "F100 = copy.deepcopy(F000)\n",
-    "F110 = copy.deepcopy(F000)\n",
+    "F001 = copy.deepcopy(F000)\n",
+    "F011 = copy.deepcopy(F000)\n",
     "F111 = copy.deepcopy(F000)\n",
     "\n",
     "# (C, B, A)\n",
-    "comp = {(\"0_0\",\"0_0\",\"0_0\"):F000, (\"0_0\",\"0_0\",\"0_1\"):F100, (\"0_0\",\"0_1\",\"0_1\"):F110, (\"0_1\",\"0_1\",\"0_1\"): F111}\n",
+    "comp = {(\"0_0\",\"0_0\",\"0_0\"):F000, (\"0_0\",\"0_0\",\"0_1\"):F001, (\"0_0\",\"0_1\",\"0_1\"):F011, (\"0_1\",\"0_1\",\"0_1\"): F111}\n",
     "strict2 = StrictTwoCategory(zeroCells, hom, identityMap, comp)\n",
     "strict2"
    ]
