--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -296,6 +296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples: defining categories, the product, and a functor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -318,6 +325,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To define a strict 2-category:\n",
+    "\n",
+    "    1. specify 0-cells\n",
+    "    2. specify categories Hom(A,B) for all 0-cells A,B\n",
+    "    3. specify identity 1-cell in Hom(A,A) for each 0-cell A (then identity 2-cell follows)\n",
+    "    4. specify composition functor Hom(B,C) x Hom(A,B) --> Hom(A,C) respecting identities and associativity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -335,16 +354,19 @@
    ],
    "source": [
     "# define the hom categories as the group Z2\n",
+    "\n",
+    "# Notation: 2_00_1 is the 2-cell with source 0 and target 0 and index 1 (actually source/target is 1_0 but we drop the 1-cell notation)\n",
     "src = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
     "target = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
     "comp = {(\"2_00_0\", \"2_00_0\"):\"2_00_0\", (\"2_00_0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"2_00_0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"2_00_0\"}\n",
     "z2 = Category(src, target, comp, {\"1_0\": \"2_00_0\"})\n",
     "\n",
+    "# Notation: 0_1 is the 0-cell with index 1\n",
     "zeroCells = [\"0_0\",\"0_1\"]\n",
     "hom = {(\"0_0\",\"0_0\"):z2, (\"0_1\",\"0_1\"):z2, (\"0_0\", \"0_1\"):z2}\n",
     "identityMap = {\"0_0\":\"1_0\", \"0_1\":\"1_0\"}\n",
     "\n",
-    "\n",
+    "# Notation: F001 is the composition functor Hom(0_0, 0_1) x Hom(0_0, 0_0) --> Hom(0_0, 0_1)\n",
     "F000 = Functor(productCategory(z2,z2), z2, {(\"1_0\",\"1_0\"):\"1_0\"}, {(\"2_00_0\",\"2_00_0\"): \"2_00_0\", \n",
     "                                                       (\"2_00_0\", \"2_00_1\"): \"2_00_1\", \n",
     "                                                       (\"2_00_1\", \"2_00_0\"): \"2_00_1\", \n",
