--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -332,7 +332,7 @@
     "\n",
     "    1. specify 0-cells\n",
     "    2. specify categories Hom(A,B) for all 0-cells A,B\n",
-    "    3. specify identity 1-cell in Hom(A,A) for each 0-cell A (then identity 2-cell follows)\n",
+    "    3. specify identity 1-cell in Hom(A,A) for each 0-cell A (identity 2-cell follows automatically)\n",
     "    4. specify composition functor Hom(B,C) x Hom(A,B) --> Hom(A,C) respecting identities and associativity"
    ]
   },
